...
    }

    val actions = mutableListOf<MenuAction>().apply {
        add(
            MenuAction(
                imageVector = Icons.Default.Edit,
                testTag = "menu_button_edit"
            ) {
                coroutineScope.launch { openElectionForm() }
            }
        )
        add(
            MenuAction(
                imageVector = Icons.Default.Delete,
                testTag = "menu_button_delete"
            ) {
                screenState.showDeleteDialog()
            }
        )
    }

...
            textAlign = TextAlign.Left,
            modifier = Modifier
                .padding(horizontal = 15.dp)
                .padding(top = 5.dp, bottom = 5.dp)
                .wrapContentWidth()
                .wrapContentHeight()
                .testTag("election_info_description_label"),
            color = colorResource(id = R.color.light_text),
            overflow = TextOverflow.Ellipsis,
            maxLines = 3
        )
    }
}
...
        frontSide = {
            Card(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(200.dp)
                    .padding(horizontal = 5.dp)
                    .testTag("election_info_winning_option_col")
                    .clickable {
                        flipController.flip()
                    },
                elevation = 5.dp
            ) {
                Column(
...
                    modifier = Modifier.background(color = colorResource(id = R.color.white))
                ) {
                    Text(
                        text = stringResource(R.string.touch_here_to_reveal_the_wise_s_answer),
                        modifier = Modifier
                            .padding(10.dp)
                            .testTag("election_info_winning_option_instructions_label"),
                        color = colorResource(id = R.color.light_text)
                    )
                    Image(
                        modifier = Modifier
                            .size(250.dp)
                            .padding(bottom = 10.dp)
                            .testTag("election_info_winning_option_instruction_icon"),
                        painter = painterResource(id = R.drawable.the_wise_sleeping),
                        contentDescription = "Waiting"
                    )
                }
            }
        },
...
